Bug fixes!
Bug fixes for:

- 404 page not showing up
- Podcast audio was not changing when clicking on another episode
- styling

--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -1,5 +1,9 @@
 @import '../../variables.scss';
 
+sup {
+    opacity: 0.5;
+}
+
 .header-container {
     display: flex;
     flex-direction: row;
