--- a/client/src/containers/App/App.scss
+++ b/client/src/containers/App/App.scss
@@ -1,5 +1,6 @@
 * {
-  font-family: "Lato" ,Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  color: white;
 }
 
 .App {
